--- a/Interficies/src/styles/App.css
+++ b/Interficies/src/styles/App.css
@@ -18,6 +18,13 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+header ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
