--- a/Interficies/src/styles/index.css
+++ b/Interficies/src/styles/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: 'Geist', system-ui, sans-serif;
   line-height: 1.5;
@@ -24,7 +28,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   min-width: 320px;
   min-height: 100vh;
 }
